dfir_rs/tests/compile-fail/stable/surface_singleton_mutation.stderr
error[E0308]: mismatched types
  --> tests/compile-fail/stable/surface_singleton_mutation.rs:9:35
   |
 3 |       let mut df = dfir_rs::dfir_syntax! {
   |  __________________-
 4 | |         stream2 = source_iter(3..=5);
 5 | |         max_of_stream2 = stream2 -> fold(|| 0usize, |a, b| *a = std::cmp::max(*a, b)) -> singleton();
...  |
 9 | |                 #max_of_stream2 = 999;
   | |                                   ^^^ expected `&usize`, found integer
...  |
12 | |             -> for_each(|x| println!("{}", x));
13 | |     };
   | |_____- expected due to the type of this binding
   |
help: consider borrowing here
   |
 9 |                 #max_of_stream2 = &999;
   |                                   +
